# local-code-search

./: .gitignore  Cargo.toml  bacon.toml
.cursor/rules/: code-search.mdc
src/: lib.rs  rpc.rs
src/embeddings/: code_splitter.rs  mod.rs  project_files.rs  project_repository.rs  project_service.rs
